[tool.poetry]
name = "patch_starter"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.10.7"

[tool.poetry.dev-dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
